gave up, just used pateron's rss

--- a/EssaysAboutSex/index.html
+++ b/EssaysAboutSex/index.html
@@ -9,7 +9,7 @@
 	<body>
 		<div id="body">
 			<h1>Essays About Sex<br>&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;&ndash;</h1>
-			<h2><a href="https://www.patreon.com/c/EwonRael">Patreon</a> | <a href="https://www.youtube.com/ewonrael">YouTube</a> | <a href="podcast/rss.xml">Podcast RSS</a> | <a href="PDFs.html">PDFs</h2>
+			<h2><a href="https://www.patreon.com/c/EwonRael">Patreon</a> | <a href="https://www.youtube.com/ewonrael">YouTube</a> | <a href="https://www.patreon.com/rss/EwonRael?auth=EHC179c2V9YmkhyPHt5CDuEEvu2dF61F&show=1750709">Podcast RSS</a> | <a href="PDFs.html">PDFs</h2>
 			<a href="00.html"><p id="aa">00 Essays About Sex [Introduction]</p></a>
 			<a href="01.html"><p id="ab">01 A Colonial Mindset in Dutch Gay Spaces</p></a>
 			<a href="02.html"><p id="ac">02 Furry Porn is Good Porn</p></a>
